[gd_scene load_steps=7 format=3 uid="uid://cr7y1t1hoywt1"]

[ext_resource type="Script" uid="uid://cs6qryb2t5pw4" path="res://ui_scenes/playerHUD/inventory/inventory_slot.gd" id="1_xnqf7"]
[ext_resource type="Texture2D" uid="uid://ckr1m6uhyqyyb" path="res://ui_scenes/playerHUD/inventory/slot.png" id="2_07g1i"]
[ext_resource type="Material" uid="uid://bn2sbolo78687" path="res://ui_scenes/playerHUD/inventory/slotMaterial.tres" id="3_7wv0d"]
[ext_resource type="Texture2D" uid="uid://mwjxc6goor4m" path="res://items/blocks/natural/dirt.png" id="3_i7kpg"]
[ext_resource type="FontFile" uid="uid://c3vw44vws5n61" path="res://zeeg/font/I-pixel-u.ttf" id="4_7ea8k"]

[sub_resource type="LabelSettings" id="LabelSettings_k4b4x"]
resource_local_to_scene = true
font = ExtResource("4_7ea8k")
font_size = 8
font_color = Color(0.854902, 0.878431, 0.901961, 1)
outline_size = 5
outline_color = Color(0.0823529, 0.113725, 0.156863, 1)

[node name="InventorySlot" type="Node2D"]
script = ExtResource("1_xnqf7")
selectedColor = Color(0.321569, 0.254902, 0.196078, 1)
notSelectedColor = Color(0.129412, 0.129412, 0.129412, 1)

[node name="button" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -2.0
offset_right = 14.0
offset_bottom = 14.0
color = Color(1, 1, 1, 0)

[node name="Slot" type="Sprite2D" parent="."]
modulate = Color(0.0823529, 0.113725, 0.156863, 1)
texture = ExtResource("2_07g1i")
centered = false

[node name="itemTexture" type="Sprite2D" parent="."]
material = ExtResource("3_7wv0d")
position = Vector2(6, 6)
texture = ExtResource("3_i7kpg")

[node name="Label" type="Label" parent="."]
offset_left = -9.0
offset_top = 6.0
offset_right = 15.0
offset_bottom = 17.0
text = "99"
label_settings = SubResource("LabelSettings_k4b4x")
horizontal_alignment = 2

[connection signal="gui_input" from="button" to="." method="_on_color_rect_gui_input"]
[connection signal="mouse_entered" from="button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="button" to="." method="_on_button_mouse_exited"]
